# gs-plugin-appimage

./: .gitignore  .gitmodules  .travis.yml  BUILDING.md  CMakeLists.txt  README.md  gs-plugin-appimage.c
lib/: CMakeLists.txt
travis/: travis-build.sh
